// Copyright 2023 The ProtoT Authors
//
// Licensed under the Apache License, Version 2.0 (the \"License\");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an \"AS IS\" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// Generated by sylk.build
syntax = "proto3";

package protot.core;



import "google/protobuf/any.proto";

message Task {

	string id = 1;
	google.protobuf.Any payload = 2;
}


// The possible task states
enum TaskState {
	PENDING = 0;
	SUCCESS = 1;
	FAIL = 2;
}